[gd_scene load_steps=10 format=3 uid="uid://dlgug5h82pnj5"]

[ext_resource type="Texture2D" uid="uid://dhfo154kag2vs" path="res://assets/misc/bars/health_bar_base.png" id="1_ytwkl"]
[ext_resource type="PackedScene" uid="uid://btyo6lo3wp2o8" path="res://scenes/battle/ui/bars/bar.tscn" id="2_bawsi"]
[ext_resource type="Script" path="res://scenes/battle/ui/bars/bars.gd" id="2_hkpxn"]
[ext_resource type="Shader" path="res://ui_bar.gdshader" id="3_cff34"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lw74y"]
resource_local_to_scene = true
shader = ExtResource("3_cff34")
shader_parameter/fill_amt = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nenr8"]
resource_local_to_scene = true
shader = ExtResource("3_cff34")
shader_parameter/fill_amt = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kwbbp"]
resource_local_to_scene = true
shader = ExtResource("3_cff34")
shader_parameter/fill_amt = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_np77x"]
resource_local_to_scene = true
shader = ExtResource("3_cff34")
shader_parameter/fill_amt = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_33m4m"]
resource_local_to_scene = true
shader = ExtResource("3_cff34")
shader_parameter/fill_amt = 1.0

[node name="Bars" type="Sprite2D"]
texture = ExtResource("1_ytwkl")
script = ExtResource("2_hkpxn")

[node name="HpBar" parent="." instance=ExtResource("2_bawsi")]
self_modulate = Color(0.678431, 0.152941, 0, 1)
material = SubResource("ShaderMaterial_lw74y")
position = Vector2(6, -64.9999)

[node name="StaminaBar" parent="." instance=ExtResource("2_bawsi")]
self_modulate = Color(0.776471, 0.513726, 0, 1)
material = SubResource("ShaderMaterial_nenr8")
position = Vector2(7.44757, -154)
scale = Vector2(1.45154, 0.6)

[node name="Armor" type="Node2D" parent="."]

[node name="CuttingArmor" parent="Armor" instance=ExtResource("2_bawsi")]
self_modulate = Color(0, 0.635294, 0.25098, 1)
material = SubResource("ShaderMaterial_kwbbp")
position = Vector2(-825, 25)
scale = Vector2(0.47, 0.47)

[node name="PiercingArmor" parent="Armor" instance=ExtResource("2_bawsi")]
self_modulate = Color(0, 0.521569, 0.627451, 1)
material = SubResource("ShaderMaterial_np77x")
position = Vector2(-1, 25)
scale = Vector2(0.47, 0.47)

[node name="CrushingArmor" parent="Armor" instance=ExtResource("2_bawsi")]
self_modulate = Color(0.4, 0.545098, 0.447059, 1)
material = SubResource("ShaderMaterial_33m4m")
position = Vector2(824, 25)
scale = Vector2(0.47, 0.47)
